<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".view.LoginFragment">


    <ProgressBar
        android:id="@+id/loginProggressBar"
        android:layout_width="73dp"
        android:layout_height="74dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextLoginEmail"
        android:layout_width="382dp"
        android:layout_height="46dp"
        android:layout_marginBottom="436dp"
        android:hint="@string/email_hint"

        android:textColorHint="@color/Light_french_beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/editTextLoginPw"
        android:layout_width="382dp"
        android:layout_height="46dp"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/Light_french_beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextLoginEmail"
        app:layout_constraintVertical_bias="0.296" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:background="@android:color/transparent"
        android:text="@string/login_acc"
        android:textColor="@color/desert_sand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPw"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/ili_text"
        android:textColor="@color/desert_sand"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCrAcc2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/buttonCrAcc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:background="@android:color/transparent"
        android:text="@string/create_acc"
        android:textColor="@color/desert_sand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>