<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintCardView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageViewRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.012"
            app:srcCompat="@drawable/image_four" />

        <TextView
            android:id="@+id/textViewUserIdName"
            android:layout_width="394dp"
            android:layout_height="30dp"
            android:alpha="0.8"
            android:background="@color/Light_french_beige"
            android:elevation="10dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="Username"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002" />

        <TextView
            android:id="@+id/textViewDescriptionRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewDateRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleRow"
            app:layout_constraintVertical_bias="0.516" />

        <TextView
            android:id="@+id/textViewTitleRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_hint"
            android:textColor="@color/Light_french_beige"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.704" />

        <TextView
            android:id="@+id/textViewDateRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>